# old-acorn

./: .ackrc  .gitignore  Cargo.toml  LICENSE  README.md  build.rs
acorn/: nat.ac  prop.ac
data/: README.md
extension/: README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
extension/client/: package.json
extension/src/: extension.ts
files/: README.md
files/burn/: README.md
files/datasets/: README.md
files/models/: README.md  model-2024-09-25-15:33:10.onnx
logs/: README.md
math/: gcd.ac  int.ac  list.ac  nat.ac  nat_gcd.ac  problems.ac  prop.ac  simplenat.ac  snapnat.ac  sub.ac  subtraction.ac
math/problems/: int_addition_1_1.ac
python/: .gitignore  analysis.ipynb  config.py  loader.py  model.py  pyproject.toml  train.ipynb  training.py
src/: .gitignore  acorn_type.rs  acorn_value.rs  active_set.rs  atom.rs  binding_map.rs  block.rs  build.rs  builder.rs  burn_model.rs  canonical_rewrite_tree.rs  clause.rs  clause_info.rs  code_gen_error.rs  common.rs  constant_map.rs  dataset.rs  display.rs  engine.rs  environment.rs  expression.rs  fact.rs  features.rs  fingerprint.rs  goal.rs  goal_context.rs  include_burn.rs  interfaces.rs  lib.rs  literal.rs  literal_set.rs  located_value.rs  logger.rs  main.rs  model.rs  module.rs  monomorphizer.rs  namespace.rs  normalizer.rs  ort_model.rs  (+28 more)
test/: basic_nat.ac  foo.ac  import_err.ac  import_ok.ac  mono_nat.ac  nonexistent_property.ac  poly_nat.ac
tests/: environment_test.rs  prover_test.rs
vscode/: interfaces.d.ts  package.json  webpack.config.js
vscode/client/: pnpm-lock.yaml  tsconfig.json
vscode/client/src/: extension.ts
vscode/debugger/: index.html  package.json
vscode/extension/: language-configuration.json  package-lock.json  package.json  tsconfig.json
vscode/infoview/: index.html  package-lock.json
vscode/search/: package-lock.json  package.json  tsconfig.json  vite.config.ts
vscode/search/src/: app.css  (+8 more)
(+5 files in other folders)
