[package]
name = "acorn"
version = "0.1.0"
edition = "2021"
default-run = "debug"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
crossbeam = "0.8.2"
dashmap = "5.5.3"
fxhash = "0.2.1"
indoc = "1.0.8"
nohash-hasher = "0.2.0"
serde = "1.0.188"
tokio = { version = "1.32.0", features = ["full"] }
tower-lsp = "0.20.0"

[profile.release]
debug = true
